[package]
name = "pxtwitter-mosaic"
authors = ["Antonio32A"]
license = "MIT"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.9"
serde_json = "1.0.67"
image = "0.24.2"
futures = "0.3.21"
itertools = "0.10.2"

console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = true # Make sure to enable this when deploying.
