[package]
name = "fixtweet-mosaic"
authors = ["Antonio32A"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
warp = "0.3.2"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls-webpki-roots"] }
image = "0.24.2"
futures = "0.3.21"
webp = "0.2.2"
const_format = "0.2.26"
lazy_static = "1.4.0"
bytes = "1.2.1"
